# cosmon

./: .architecture-waivers.toml  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  THESIS.md  deny.toml  justfile  lefthook.yml  rust-toolchain.toml  smoke-dispatch.sh  tarpaulin.toml  wrangler.toml
crates/apps-transport-http/: Cargo.toml
crates/apps-transport-http/src/: bind.rs  error.rs  lib.rs  middleware.rs  routing.rs
crates/apps-transport-http/tests/: e2e.rs  e2e_real_socket.rs
crates/claudion/: Cargo.toml
crates/claudion/src/: discover.rs  energy.rs  error.rs  lib.rs  metrics.rs  parse.rs  pricing.rs  types.rs
crates/cosmon-agent-harness/: Cargo.toml
crates/cosmon-agent-harness/src/: bootstrap.rs  budget.rs  compaction.rs  egress_probe.rs  error.rs  invariants.rs  lib.rs  message_log.rs  spine.rs  tool.rs
crates/cosmon-agent-harness/tests/: exec_command_egress.rs  exec_command_netns_e2e.rs  exec_command_smoke.rs  local_research_tools_smoke.rs  semver_token_compat.rs
crates/cosmon-api/: Cargo.toml  README.md
crates/cosmon-api/src/: cluster.rs  ensemble.rs  galaxies.rs  inbox.rs  instrumentation.rs  lib.rs  main.rs  molecules.rs  motion.rs  peek.rs  whispers.rs
crates/cosmon-api/tests/: loadtest.rs  smoke.rs
crates/cosmon-archive/: Cargo.toml
crates/cosmon-archive/src/: lib.rs
crates/cosmon-archive/tests/: integration.rs
crates/cosmon-ask/: Cargo.toml  rules.toml
crates/cosmon-ask/src/: atomic_question.rs  audit.rs  lib.rs  pipeline.rs  rule_parser.rs
crates/cosmon-ask/tests/: end_to_end.rs
crates/cosmon-bridge-claude/: Cargo.toml
crates/cosmon-bridge-claude/src/: beads.rs  entropy.rs  lib.rs  llm.rs
crates/cosmon-cli/: Cargo.toml  build.rs
crates/cosmon-cli/man/: cs.1
crates/cosmon-cli/src/: adr.rs  dotpath.rs  energy_probe.rs  event_log.rs  lib.rs  llm.rs  main.rs  native.rs  neurion_hint.rs  operator_event.rs  pow.rs  realized_watcher.rs  resurrect.rs  root_help.rs  sensorium.rs  spore_containment.rs  spore_seal.rs  tackle_env.rs  trust.rs  visual.rs
crates/cosmon-cli/templates/: mindguard-surface.toml
crates/cosmon-cli/tests/: api_cli_coverage.rs  archive_read.rs  archive_verify_cli.rs  archive_wiring.rs  bootstrap_monotonicity.rs  cli.rs  config_adapter_provider_override.rs  config_adapters_list.rs  constellation.rs  cross_galaxy.rs  demo.rs  demo_clean_machine.rs  demo_local_acceptance.rs  doctor.rs  done_attribution_stamp.rs  done_merge_conflict.rs  done_no_branch_archive.rs  done_pre_done_gate.rs  energy_budget.rs  ensemble_snapshot.rs  fleet_resolve.rs  help_goldens.rs  invariant_archived_terminal.rs  local_adapter_output_honesty.rs  local_model_selection.rs  mindguard_surface_visual.rs  opt_in_share.rs  pane_died_hook.rs  peek_snapshot.rs  pilot_experimental_gate.rs  provider_bias_reconcile_lint.rs  public_attribution_domain.rs  purge_stale_tmux.rs  readme_cli_table.rs  realized_model_matrix.rs  realized_watch_reexec.rs  reconcile_idempotent_cli.rs  restart_fidelity_no_neurion.rs  sensorium_strip.rs  session_roundtrip.rs  (+15 more)
crates/cosmon-client/: Cargo.toml
crates/cosmon-client/src/: client.rs  config.rs  lib.rs  main.rs
crates/cosmon-cockpit/: Cargo.toml
crates/cosmon-cockpit-http/: Cargo.toml
crates/cosmon-cockpit-http/src/: main.rs  snapshot.rs
crates/cosmon-cockpit-http/static/: index.html
crates/cosmon-cockpit/src/: adapter.rs  lib.rs  selfcheck.rs  view.rs
crates/cosmon-core/: Cargo.toml
crates/cosmon-core/src/: adapter_attribution.rs  adapter_exit.rs  agent.rs  artifact_map.rs  atlas.rs  attention.rs  attestor_audit.rs  attestor_event_v1.rs  audit.rs  auth.rs  avatar.rs  bead.rs  calibration.rs  capability.rs  cas.rs  chamber.rs  clearance.rs  cluster.rs  codex_energy.rs  committee.rs  config.rs  context.rs  convoy.rs  creativity.rs  criticality.rs  declaration.rs  det_cache.rs  dialogue.rs  dispatch.rs  dispatch_refusal.rs  egress.rs  emoji.rs  energy.rs  ensemble.rs  entropy.rs  error.rs  event.rs  event_v2.rs  evolve.rs  expiry.rs  (+61 more)
crates/cosmon-core/tests/: attendant_controller_formula.rs  autonomy_attacks.rs  calibration_corpus.rs  deep_think_decompose_optin.rs  event_v2_worker_spawn_roundtrip.rs  mission_plan_freeze_gate_guard.rs  nucleon_test_formula.rs  producer_work_formula.rs  properties.rs  realized_model_golden.rs  role_typestate_compile_fail.rs  run_state_ghosts.rs  spec_conformance.rs  typed_links_conformance.rs  voix_reply_formula.rs
crates/cosmon-crashtest/: Cargo.toml  README.md
crates/cosmon-crashtest/src/: lib.rs
crates/cosmon-crashtest/tests/: recovery.rs
crates/cosmon-daemon/: Cargo.toml
crates/cosmon-daemon-supervisor/: Cargo.toml
crates/cosmon-daemon-supervisor/src/: config.rs  event_loop.rs  lib.rs  main.rs  model.rs  policy.rs  reload.rs
crates/cosmon-daemon-supervisor/tests/: crash_loop_propulsion_down.rs  double_spawn_on_restart.rs  mock_adapters.rs  signal_cascade.rs  spawn_failure_isolated.rs  throttle_resume.rs
crates/cosmon-daemon/src/: galaxies.rs  handlers.rs  lib.rs  main.rs  state.rs
crates/cosmon-daemon/tests/: integration.rs
crates/cosmon-filestore/: Cargo.toml
crates/cosmon-filestore/examples/: trunk_lock_holder.rs
crates/cosmon-filestore/src/: cas.rs  event.rs  lib.rs  presence_store.rs  resolve.rs
crates/cosmon-filestore/tests/: fleet_lock_guard.rs  trunk_lock_concurrent.rs
crates/cosmon-fuzz/: Cargo.toml  README.md
crates/cosmon-fuzz/src/: lib.rs
crates/cosmon-graph/: Cargo.toml
crates/cosmon-hash/: Cargo.toml
crates/cosmon-mcp/: Cargo.toml  README.md
crates/cosmon-notary/: Cargo.toml
crates/cosmon-observability/: Cargo.toml
crates/cosmon-oidc-testkit/: Cargo.toml  Dockerfile  README.md  build.rs
crates/cosmon-ops-tools/: Cargo.toml
crates/cosmon-pilot/: Cargo.toml  SMOKE.md
crates/cosmon-provider/: Cargo.toml
crates/cosmon-registry/: Cargo.toml
crates/cosmon-remote/: Cargo.toml  README.md  build.rs
xtask/: Cargo.toml
xtask/goldens/: api-ref-blocks.md
xtask/src/: lib.rs  main.rs
xtask/tests/: golden.rs
(+1634 files in other folders)
