[package]
name = "cosmon-daemon-supervisor"
publish.workspace = true
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true
description = "Meta-LaunchAgent supervisor for long-running Cosmon-managed daemons (core + ports + real adapters + event loop)"

[[bin]]
name = "cosmon-daemon-supervisor"
path = "src/main.rs"

[dependencies]
blake3.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio.workspace = true
notify.workspace = true
nix.workspace = true
clap.workspace = true
tempfile.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
