[package]
name = "cosmon-hash"
publish.workspace = true
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
# Frontier crate (ADR-092): a third party would `cargo add` this without
# wanting AGPL — keep on Apache-2.0 to preserve permissive boundary.
license = "AGPL-3.0-only"
description = "Content-addressed hashing primitives for Cosmon (blake3 + canonical JSON)"

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
